src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>KVH Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>MQL In Progress</fullName>
        </values>
        <values>
            <fullName>MQL New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Passed to Partner</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>SQL In Progress</fullName>
        </values>
        <values>
            <fullName>SRL New</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Chart_File_Delivery_Method__c</fullName>
        <description>How are digital charts and operational files currently delivered to the vessel?</description>
        <inlineHelpText>How are digital charts and operational files currently delivered to the vessel?</inlineHelpText>
        <label>Chart/File Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Background/multicast satellite delivery</fullName>
                </value>
                <value>
                    <fullName>CDs</fullName>
                </value>
                <value>
                    <fullName>Flash drives</fullName>
                </value>
                <value>
                    <fullName>Primary SATCOM plan</fullName>
                </value>
                <value>
                    <fullName>Separate SATCOM subscription</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi in port</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charter__c</fullName>
        <label>Charter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crew_Nationality__c</fullName>
        <description>Added for HM Integration</description>
        <label>Crew Nationality(ies)</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew_per_Site__c</fullName>
        <description>Added from HM Integration</description>
        <label>Crew per Site</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Medium_of_Training_Used__c</fullName>
        <description>Videotel/InvoiceIT Project</description>
        <label>Current Medium of Training Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <description>These are maintained by Ronda Vye.</description>
        <inlineHelpText>When a Lead is Disqualified, please choose a Disqualification Reason.</inlineHelpText>
        <label>Disqualification Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Support Case</fullName>
                </value>
                <value>
                    <fullName>Junk</fullName>
                </value>
                <value>
                    <fullName>Tracfone</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_training_onboard__c</fullName>
        <description>Include as part of Videotel and InvoiceIT integration</description>
        <label>Do you have training onboard?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <description>alternate email address</description>
        <inlineHelpText>alternate email address</inlineHelpText>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <description>Added during HM Integration</description>
        <label>Fleet Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <description>Used to track the import record ID., i.e. Importing Leads from HM Walport SFDC</description>
        <label>Import ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Function</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KVH_Sales_Office__c</fullName>
        <description>This field represents Sales office with which the lead will most likely be associated. It provides a means for summary reporting by each particular Sales office. This Picklist should always match the corresponding Picklist in the Account Object</description>
        <label>KVH Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KV UK</fullName>
                </value>
                <value>
                    <fullName>KV Asia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Category__c</fullName>
        <label>Lead Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MQL</fullName>
                    <default>true</default>
                    <label>MQL</label>
                </value>
                <value>
                    <fullName>SRL</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>PQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Role__c</fullName>
        <label>Lead Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Decision-maker</fullName>
                </value>
                <value>
                    <fullName>Technical Resource</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Naval_Architect__c</fullName>
        <label>Naval Architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Given_This_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Given This Lead</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Shipping_Company_Training_Center__c</fullName>
        <description>Videotel/InvoiceIT Integration project</description>
        <label>Related Shipping Company Training Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rig__c</fullName>
        <label>Rig</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KV UK</fullName>
                </value>
                <value>
                    <fullName>KV Asia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Value__c</fullName>
        <description>Added per HM Integration</description>
        <label>Subscription Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vessel_Brand__c</fullName>
        <label>Vessel Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vessel_Flag__c</fullName>
        <description>Videotel/InvoiceIT project</description>
        <label>Vessel Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vessel_Length__c</fullName>
        <label>Vessel Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vessel_Name__c</fullName>
        <label>Vessel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vessel_Route__c</fullName>
        <description>Where does/do your vessel(s) typically operate?</description>
        <inlineHelpText>Where does/do your vessel(s) typically operate?</inlineHelpText>
        <label>Vessel Route</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local, coastal waters</fullName>
                </value>
                <value>
                    <fullName>Regionally</fullName>
                </value>
                <value>
                    <fullName>Globally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_the_existing_Training_Provider__c</fullName>
        <inlineHelpText>Enter (text) the existing Training Provider</inlineHelpText>
        <label>Who is the existing Training Provider?</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Videotel_Invididual_Leads_2019</fullName>
        <columns>Sales_Office__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2019 12:00 AM</value>
        </filters>
        <label>Videotel Invididual Leads 2019</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Videotel_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Videotel Leads</label>
        <queue>Videotel_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>KV_Sales_Agents</group>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>